unpackaged/main/default/objects/OrderApi__Receipt_R__c/OrderApi__Receipt_R__c.object-meta.xml
<CustomObject>
    <description>The Receipt (R) object tracks the reporting currency for payments and refunds when Fonteva&#39;s multi-currency is enabled.</description>
    <label>Receipt (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Receipt (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>