unpackaged/main/default/objects/OrderApi__Receipt_R__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates this receipt to the business group.</description>
    <inlineHelpText>Relates this receipt to the business group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Receipts (R)</relationshipLabel>
    <relationshipName>Receipts_R</relationshipName>
    <type>Lookup</type>
</CustomField>