unpackaged/main/default/objects/OrderApi__Receipt_R__c/fields/OrderApi__Is_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the Receipt is related to a customer payment.</description>
    <inlineHelpText>**System Calculated** Checked when the Receipt is related to a customer payment.</inlineHelpText>
    <label>Is Payment</label>
    <type>Checkbox</type>
</CustomField>