unpackaged/main/default/objects/OrderApi__Receipt_R__c/fields/OrderApi__Is_Refund__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the Receipt is for a customer refund</description>
    <inlineHelpText>**System Calculated** Checked when the Receipt is for a customer refund</inlineHelpText>
    <label>Is Refund</label>
    <type>Checkbox</type>
</CustomField>