unpackaged/main/default/objects/OrderApi__Receipt_R__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This value stores the sum of the payment&#39;s total price paid for each item in the reporting currency.</description>
    <inlineHelpText>This value stores the sum of the payment&#39;s total price paid for each item in the reporting currency.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>